--- a/package.json
+++ b/package.json
@@ -45,12 +45,12 @@
   "dependencies": {
     "bcrypt": "^3.0.3",
     "body-parser": "^1.18.3",
+    "config": "^3.0.1",
     "cookie-parser": "^1.4.3",
     "express": "^4.16.4",
     "express-session": "^1.15.6",
     "jsonwebtoken": "^8.4.0",
     "mongoose": "^5.4.2",
-    "nconf": "^0.10.0",
     "passport": "^0.4.0",
     "passport-http-bearer": "^1.0.1",
     "winston": "^3.1.0"
@@ -58,13 +58,13 @@
   "devDependencies": {
     "@types/bcrypt": "^3.0.0",
     "@types/body-parser": "^1.17.0",
+    "@types/config": "0.0.34",
     "@types/cookie-parser": "^1.4.1",
     "@types/express": "^4.16.0",
     "@types/express-session": "^1.15.11",
     "@types/jest": "^23.3.11",
     "@types/jsonwebtoken": "^8.3.0",
     "@types/mongoose": "^5.3.7",
-    "@types/nconf": "0.0.37",
     "@types/node": "^10.12.18",
     "@types/passport": "^1.0.0",
     "@types/passport-http-bearer": "^1.0.33",
