--- a/.gitignore
+++ b/.gitignore
@@ -195,6 +195,7 @@ ClientBin/
 *.publishsettings
 node_modules/
 coverage/
+dist/
 orleans.codegen.cs
 
 # Since there are multiple workflows, uncomment next line to ignore bower_components
