--- a/package.json
+++ b/package.json
@@ -43,7 +43,7 @@
     ]
   },
   "dependencies": {
-    "bcrypt": "^3.0.3",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.18.3",
     "config": "^3.0.1",
     "cookie-parser": "^1.4.3",
@@ -56,7 +56,7 @@
     "winston": "^3.1.0"
   },
   "devDependencies": {
-    "@types/bcrypt": "^3.0.0",
+    "@types/bcryptjs": "^2.4.2",
     "@types/body-parser": "^1.17.0",
     "@types/config": "0.0.34",
     "@types/cookie-parser": "^1.4.1",
